part2/exercise2.06/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingpong-ingress
  namespace: pingpong-ns
  annotations:
    #use "/pingpong" path whilst the ping-pong application listens on "/"
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /pingpong
        backend:
          serviceName: pingpong-svc
          servicePort: 2345
      - path: /main
        backend:
          serviceName: main-svc
          servicePort: 2345
